Refactor calculate monthly amount to pay and update unit test